--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -11,12 +11,10 @@
     <img
       src="/src/public/images/explore-logo.jpg"
       class="logo vanilla"
-      alt="JavaScript logo"
+      alt="Explore logo"
     />
   </a>
-  <h1>Explore the World!</h1>
-  <div class="card">
+  <!-- <div class="card">
     <button id="counter" type="button"></button>
-  </div>
-  <p class="read-the-docs">Click on the Vite logo to learn more</p>
+  </div> -->
 </div>
