--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,12 +1,4 @@
-<div id="header">
-  <h1>Explore the World</h1>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="/src/product.html">Book Today</a></li>
-    <li><a href="/src/discover.html">Discover</a></li>
-  </ul>
-</div>
-<div>
+<div class="header">
   <a href="index.html" target="_blank">
     <img
       src="/src/public/images/explore-logo.jpg"
@@ -14,7 +6,12 @@
       alt="Explore logo"
     />
   </a>
-  <!-- <div class="card">
-    <button id="counter" type="button"></button>
-  </div> -->
+  <h1>Explore the World</h1>
+</div>
+<div>
+  <ul>
+    <li><a href="/index.html">Home</a></li>
+    <li><a href="/src/product.html">Book Today</a></li>
+    <li><a href="/src/discover.html">Discover</a></li>
+  </ul>
 </div>
