accordion dynamic when button is clicked.

--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -13,5 +13,6 @@
     <li><a href="/index.html">Home</a></li>
     <li><a href="/src/product.html">Book Today</a></li>
     <li><a href="/src/discover.html">Discover</a></li>
+    <li><a href="/src/flights.html">Flights</a></li>
   </ul>
 </div>
