--- a/src/style/style.css
+++ b/src/style/style.css
@@ -68,23 +68,36 @@ h1 {
 }
 
 .card {
-  background-color: #ffffff;
+  background-color: #c9c9c9;
+  color: rgb(59, 59, 59);
   border-radius: 12px;
   padding: 1.25rem;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
+  max-width: 600px;
 }
-
-/* .card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 16px 35px rgba(0, 0, 0, 0.12);
-} */
 
 .card img {
   width: 100%;
-  height: 200px; /* or any card-friendly height */
-  object-fit: cover; /* fills container nicely */
+  height: 400px;
+  object-fit: cover;
   border-radius: 10px;
+}
+
+.card button {
+  background-color: #773535;
+}
+
+.booking-link a {
+  color: rgb(36, 36, 36);
+  text-decoration: none;
+  background-color: #885c5c;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.booking-link a:hover {
+  background-color: #9b7171;
 }
 
 /*******************************
