--- a/src/style/style.css
+++ b/src/style/style.css
@@ -58,13 +58,24 @@ h1 {
   color: #888;
 }
 
+.discover-heading {
+  justify-items: center;
+}
+
+.discover-question {
+  color: #213547;
+  font: Helvetica;
+}
+
+.discover-statement {
+  color: #213547;
+}
+
 /*******************************
 *            CARDS             *
 *******************************/
-.card-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-  gap: 1.5rem;
+#app {
+  justify-items: center;
 }
 
 .card {
@@ -98,6 +109,67 @@ h1 {
 
 .booking-link a:hover {
   background-color: #9b7171;
+}
+
+/*******************************
+*           BOOKING            *
+*******************************/
+.booking-container {
+  display: flex;
+  justify-content: center;
+  background-color: #f4f6f8;
+  color: #1f2933;
+  padding: 3rem 1rem;
+}
+
+.booking-container form {
+  background-color: #ffffff;
+  padding: 2rem;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 420px;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+}
+
+.booking-container select {
+  color: #111827; /* force visible text */
+  background-color: #f9fafb;
+}
+
+.booking-container option {
+  color: #111827;
+  background-color: #ffffff;
+}
+
+label {
+  display: block;
+  margin-top: 1rem;
+  margin-bottom: 0.3 rem;
+  font-weight: 600;
+  color: #374151;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 0.6rem;
+  border-radius: 6px;
+  border: 1px solid #d1d5db;
+  background-color: #f9fafb;
+  color: #111827;
+  font-size: 0.95rem;
+}
+
+input[readonly] {
+  background-color: #e5e7eb;
+  cursor: not-allowed;
+}
+
+input:focus,
+select:focus {
+  outline: none;
+  border-color: #2563eb;
+  box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.25);
 }
 
 /*******************************
